--- a/app/src/main/res/layout/winner_activity.xml
+++ b/app/src/main/res/layout/winner_activity.xml
@@ -2,11 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
+    android:id="@+id/winnerScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.winner.WinnerActivity">
 
-    <!-- TODO -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/imgSelection"
+        android:text="@string/winneris"
+        android:paddingTop="@dimen/space"
+        android:id="@+id/winnerIsText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textSize="@dimen/titles"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageView
+        android:id="@+id/ivWinnerPokemon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/winnerName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/winnerIsText"
+        app:srcCompat="@drawable/gyarados"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/winnerName"
+        android:layout_margin="@dimen/imgSelection"
+        android:textSize="@dimen/titles"
+        android:textColor="@color/black"
+        android:paddingBottom="@dimen/space"
+        android:text="@string/nameGyarados"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
