--- a/app/src/main/res/layout/battle_activity.xml
+++ b/app/src/main/res/layout/battle_activity.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.battle.BattleActivity">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.6" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -64,26 +78,12 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/ivBattleSecondPokemon"
+            android:id="@+id/botPokemonImg"
             android:layout_weight="1"
             android:src="@drawable/gyarados"
             android:padding="@dimen/imgSelection"/>
 
     </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
 
     <ImageView
         android:layout_width="96dp"
