--- a/app/src/main/res/layout/winner_activity.xml
+++ b/app/src/main/res/layout/winner_activity.xml
@@ -23,7 +23,7 @@
 
 
     <ImageView
-        android:id="@+id/ivWinnerPokemon"
+        android:id="@+id/winnerImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/winnerName"
